--- a/src/components/footer/Component.module.css
+++ b/src/components/footer/Component.module.css
@@ -1,5 +1,5 @@
 .lists{
-    position: fixed;
+    margin-top: 100%;
     bottom: 5%;
     width: 100%;
     display: flex;
@@ -11,14 +11,17 @@
     color: rgba(0, 0, 0, 0.493);
 }
 .copy{
-    position: fixed;
-    bottom: 0;
+     bottom: 0;
     width: 100%;
     padding: 5px 50px;  
 }
 
 ul{
     list-style-type: none;
+}
+a{
+    text-decoration: none;
+    color: #000;
 }
 
 a:hover{
