--- a/src/components/banners/mainBanner/Component.module.css
+++ b/src/components/banners/mainBanner/Component.module.css
@@ -43,11 +43,13 @@
 .subtitle {
   font-size: 14px;
   color: rgb(0, 0, 0);
+  font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
 
 h1 {
+  margin-top: 0px;
   font-size: 42px;
   font-weight: bold;
   color: #b00d1e;
