--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,10 @@
     
     font-family: poppins;
 }
+
+.albumList {
+    display: flex;           
+    flex-wrap: wrap;        
+    gap: 20px;               
+    justify-content: center;  
+}
