--- a/src/components/banners/templateBanner/Component.module.css
+++ b/src/components/banners/templateBanner/Component.module.css
@@ -3,14 +3,15 @@
     justify-content: center;
     align-items: center;
     max-width: 100%;
-    height: 400px; 
+    height: 300px; 
+    margin-bottom: 0%;
     overflow: hidden;
-    
+    position: static;
 }
 .image{
     position: absolute;
     width: 100%;
-    height: 50%;
+    height: 30%;
     object-fit: cover;  
     z-index: 1;
 
@@ -30,4 +31,10 @@
 }
 .infoContainer p{
     color: #ffffff;
+}
+
+@media (max-width: 768px) {
+    .infoContainer h1{
+        font-size: 30px;
+    }
 }
