--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,14 @@
 *{
     
     font-family: poppins;
+
+}body, html {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 body{
     overflow-x: hidden;
 
-}
-
-.albumList {
-    display: flex;           
-    flex-wrap: wrap;        
-    gap: 20px;               
-    justify-content: center;  
 }
