feat: gerenciamento de estado funcional

--- a/src/components/header/Component.module.css
+++ b/src/components/header/Component.module.css
@@ -82,6 +82,11 @@
   cursor: pointer;
 }
 
+.cart{
+  margin-right: 5px;
+  margin: auto;
+}
+
 /* Estilos para telas menores */
 @media (max-width: 768px) {
   .navbarMenu {
